@@ -6,6 +6,7 @@ Version 1.2.1 - SVN
    disabled "off" choice.
  - Added toggle buttons in jury interface for allowing submission
    and judging per problem and language.
+ - Added option to enter verifier's name in jury interface.
 
 Version 1.2.0 - 26 June 2006
 ----------------------------
